--- a/source/includes/footer.html
+++ b/source/includes/footer.html
@@ -1,3 +1,18 @@
 <footer class="main-footer">
-  <p class="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi placeat perspiciatis ducimus voluptatem voluptatibus iste expedita quos harum ipsum ex, hic a totam vero ut doloremque ratione mollitia esse quis.</p>
+
 </footer>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/svg4everybody@2.1.9/dist/svg4everybody.min.js"></script>
+
+<script src="js/ofi.min.js"></script>
+<script src="js/main.js"></script>
+
+</body>
+
+</html>
