--- a/source/includes/header.html
+++ b/source/includes/header.html
@@ -1,3 +1,31 @@
-<header class="main-header">
-  <p class="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi placeat perspiciatis ducimus voluptatem voluptatibus iste expedita quos harum ipsum ex, hic a totam vero ut doloremque ratione mollitia esse quis.</p>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+  <meta name="format-detection" content="telephone=no">
+  <title>Start</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- Favicon -->
+
+</head>
+
+<body>
+  <div id="page-preloader">
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+  </div>
+  <header class="main-header">
+    
+  </header>
