--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,18 +1,107 @@
 @import "variables.scss";
 
-body {
-  margin: 0;
-  padding: 0;
-}
-* {
-  box-sizing: border-box;
-}
-*:before,
-*:after {
-  box-sizing: border-box;
-}
 .clearfix:after {
-  content: '';
+  content: "";
   display: table;
   clear: both;
 }
+
+::-webkit-input-placeholder {
+  color: $placeholder;
+}
+::-moz-placeholder {
+  color: $placeholde;
+}
+:-moz-placeholder {
+  color: $placeholde;
+}
+:-ms-input-placeholder {
+  color: $placeholde;
+}
+
+// @media (min-width: 1300px) {
+//   .container {
+//     max-width: 1320px;
+//   }
+// }
+
+/* preloader */
+
+#page-preloader {
+  position: fixed;
+  display: flex;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  z-index: 100500;
+}
+
+.spinner {
+  margin: auto;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner>div {
+  width: 18px;
+  height: 18px;
+  background-color: $indigo;
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0)
+  }
+  40% {
+    -webkit-transform: scale(1.0)
+  }
+}
+
+@keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40% {
+    -webkit-transform: scale(1.0);
+    transform: scale(1.0);
+  }
+}
+
+/* /preloader */
+
+/* bootstrap hack: fix content width inside hidden tabs */
+
+.tab-content>.tab-pane,
+.pill-content>.pill-pane {
+  display: block;
+  height: 0;
+  overflow: hidden;
+}
+
+.tab-content>.active,
+.pill-content>.active {
+  height: auto;
+}
+
+/* /bootstrap hack */
