--- a/source/includes/footer.html
+++ b/source/includes/footer.html
@@ -1,6 +1,9 @@
+</div> <!-- .content -->
+<!-- footer -->
 <footer class="main-footer">
-
+  footer
 </footer>
+</div> <!-- .wrapper -->
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
