--- a/source/includes/header.html
+++ b/source/includes/header.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <div class="wrapper">
   <div id="page-preloader">
     <div class="spinner">
       <div class="bounce1"></div>
@@ -29,3 +30,5 @@
   <header class="main-header">
     
   </header>
+  <!-- /header -->
+  <div class="content">
