--- a/source/includes/header/header.html
+++ b/source/includes/header/header.html
@@ -18,11 +18,7 @@
 <body>
   <div class="wrapper">
     <div id="page-preloader">
-      <div class="spinner">
-        <div class="bounce1"></div>
-        <div class="bounce2"></div>
-        <div class="bounce3"></div>
-      </div>
+      <div class="loader"></div>
     </div>
     <header class="main-header">
       header
