--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -56,53 +56,29 @@
   z-index: 100500;
 }
 
-.spinner {
+.loader {
   margin: auto;
-  width: 70px;
-  text-align: center;
-}
-
-.spinner>div {
-  width: 18px;
-  height: 18px;
-  background-color: $spinnercolor;
-  border-radius: 100%;
   display: inline-block;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
 }
 
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
+.loader:before {
+  content: '';
+  display: block;
+  width: 3rem;
+  height: 3rem;
+  border: 3px solid #e6e6e6;
+  border-top: 3px solid #cccccc;
+  border-radius: 50%;
+  -webkit-animation: loader-rotate 1s linear infinite;
+  animation: loader-rotate 1s linear infinite;
 }
 
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-
-@-webkit-keyframes sk-bouncedelay {
-  0%,
-  80%,
+@keyframes loader-rotate {
+  0% {
+    transform: rotate(0);
+  }
   100% {
-    -webkit-transform: scale(0)
-  }
-  40% {
-    -webkit-transform: scale(1.0)
-  }
-}
-
-@keyframes sk-bouncedelay {
-  0%,
-  80%,
-  100% {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  }
-  40% {
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
+    transform: rotate(360deg);
   }
 }
 
